--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ main {
     padding: 8px 16px;
     font-size: 16px;
     line-height: 24px;
+    cursor: pointer;
 }
 
 .btn-primary {
@@ -49,6 +50,7 @@ main {
 
 .logo {
     max-width: 100px;
+    cursor: pointer;
 }
 
 .logo img {
@@ -191,6 +193,7 @@ main {
     box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05);
     background: #FFF;
     overflow: hidden;
+    text-decoration: none;
 }
 
 .products-card__image {
@@ -300,6 +303,125 @@ main {
     font-size: 18px;
     color: #8C8C8C;
     margin-bottom: 24px;
+}
+
+.cart-modal__overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.4);
+    align-items: center;
+    justify-content: center;
+}
+
+.cart-modal__overlay.open {
+    display: flex;
+}
+
+.cart-modal {
+    border-radius: 5px;
+    background: #FFF;
+    padding: 40px 45px;
+    max-width: 780px;
+    width: 100%;
+}
+
+.cart-modal__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 45px;
+}
+
+.cart-modal__header--title {
+    font-weight: 700;
+    font-size: 36px;
+    color: #000;
+}
+
+.cart-modal__header--close {
+    max-height: 25px;
+    max-width: 25px;
+    cursor: pointer;
+}
+
+.cart-modal__body {
+    margin-bottom: 50px;
+}
+
+.cart-modal__footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.cart-modal__footer--price {
+    border-radius: 5px;
+    padding: 15px 20px;
+    background: #262626;
+    color: #FFF;
+}
+
+.cart-modal__footer--controls {
+    display: flex;
+    gap: 10px;
+}
+
+.cart-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+    border-bottom: 1px solid #D9D9D9;
+    padding-bottom: 8px;
+}
+
+.cart-item:not(:last-child) {
+    margin-bottom: 15px;
+}
+
+.cart-item__title {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 32px;
+    color: #000;
+}
+
+.cart-item__controls--price {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 32px;
+    color: #000;
+    margin-right: 47px;
+}
+
+.cart-item__controls--count {
+    font-weight: 400;
+    font-size: 16px;
+    color: #000;
+}
+
+.cart-item__controls {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.cart-item__controls button {
+    border: 1px solid #40A9FF;
+    color: #40A9FF;
+    background: #FFF;
+    max-height: 32px;
+    max-width: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media (max-width: 991px) {
